# stove

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  rust.yml
assets/: DefaultWhiteGrid.rgba  icons.rgba  manifest.xml  pot.rgba  pot_16.rgba  pot_32.rgba  proto.rgba  stove.manifest
src/: action.rs  actor.rs  asset.rs  asset_utils.rs  camera.rs  dialog.rs  input.rs  lib.rs  main.rs  map_utils.rs  persistence.rs  picking.rs  rendering.rs  rpc.rs  startup.rs  triggers.rs  ui.rs  unlit.rs  unlit.wgsl  wire.rs  wire.wgsl
src/actor/: delete.rs  duplicate.rs  duplication.rs  transform.rs  transforms.rs  transplant.rs  ui.rs
src/extras/: A02_Tutorial_Fog.uasset  A02_Tutorial_Fog.uexp  AirKickPreRoom.uexp  Basic_SplitRGB.uasset  SM_Cybercity_Hook_End.uasset  mesh.rs  mod.rs  texture.rs
src/extras/tests/: AirKickPreRoom.uasset  Basic_SplitRGB.ubulk  Basic_SplitRGB.uexp  SM_Cybercity_Hook_End.uexp  T_WD105_hr_ControlTower_01a_B.uasset  T_WD105_hr_ControlTower_01a_B.ubulk  T_WD105_hr_ControlTower_01a_B.uexp  moon0023.uasset  moon0023.uexp
src/mesh/: A02_Outside_Castle.uasset  mod.rs
src/rendering/: axes.rs  axes.wgsl  camera.rs  common.frag  common.vert  cube.frag  cube.rs  cube.vert  cube.wgsl  mesh.frag  mesh.rs  mesh.vert  mesh.wgsl  mod.rs  solid.frag  sprite.frag  sprite.rs  sprite.vert  wire.frag
