[package]
name = "stove"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/stove"
description = "an editor for cooked unreal engine map files"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.13.2"
edition = "2021"

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "84e60cc" }
byteorder = "1.5"
bitflags = "2.4"
texture2ddecoder = "0.0"
repak = { git = "https://github.com/trumank/repak", rev = "76c5ee8", features = ["oodle_explicit"] }
aes = "0.8"
hex = "0.4"
bevy = { version = "0.12", default-features = false, features = [
    "x11",
    "wayland",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "multi-threaded",
] }
winit = "0.28"
bevy_mod_raycast = { version = "0.16", default-features = false }
smooth-bevy-cameras = "0.10"
bevy_mod_outline = "0.6"
bevy_egui = "0.24"
egui = { version = "0.24", features = ["persistence", "serde"] }
egui-notify = "0.11"
discord-rich-presence = "0.2"
dirs = "5.0"
ron = "0.8"
rfd = "0.12"
update-informer = { version = "1.1", default-features = false, features = [
    "github",
    "rustls-tls",
    "ureq"
] }

[dev-dependencies]
png = "0.17"
obj-exporter = "0.2"

[build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
