[package]
name = "stove"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/stove"
description = "an editor for cooked unreal engine map files"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.13.2"
edition = "2021"

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "84e60cc" }
byteorder = "1.5"
bitflags = "2.4"
texture2ddecoder = "0.0"
repak = { git = "https://github.com/trumank/repak", rev = "76c5ee8", features = ["oodle_explicit"] }
aes = "0.8"
hex = "0.4"
bevy = { version = "0.14", default-features = false, features = [
    "x11",
    "wayland",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "multi_threaded",
] }
bevy_dylib = "0.14"
winit = "0.30"
bevy_mod_raycast = { version = "0.18", default-features = false }
smooth-bevy-cameras = "0.12"
bevy_mod_outline = "0.8"
bevy_egui = "0.28"
egui = { version = "0.28", features = ["persistence", "serde"] }
egui-notify = "0.15"
bevy_framepace = { version = "0.17", default-features = false }
discord-rich-presence = "0.2"
dirs = "5.0"
ron = "0.8"
rfd = "0.14"
update-informer = { version = "1.1", default-features = false, features = [
    "github",
    "rustls-tls",
    "ureq"
] }
walkdir = "2.5"

[dev-dependencies]
png = "0.17"
obj-exporter = "0.2"

[build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
